# communitas

./: .dockerignore  .gitignore  .sgignore  AGENTS.md  AGENTS_API.md  ARCHITECTURE.md  AUTONOMOUS_ORCHESTRATION_COMPLETION_REPORT.md  BROWSER_DEVELOPMENT.md  CHANGELOG.md  CLAUDE.md  COMMUNITAS_ARCHITECTURE.md  COMMUNITAS_CORE_INTEGRATION.md  COMMUNITAS_DHT_SCHEMAS.md  COMMUNITAS_TASKS.md  Cargo.toml  DESIGN.md  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  Dockerfile.bootstrap  Dockerfile.bootstrap.backup  Dockerfile.linux  Dockerfile.simple  Dockerfile.test  Dockerfile.testnet  EXPERIMENTAL_MODE_TESTING.md  FOUR_WORD_IDENTITY_ARCHITECTURE.md  LICENSE-AGPL-3.0  LICENSE-COMMERCIAL.md  MCP_SERVERS.md  Makefile  NETWORK_TESTING.md  README.md  SECURITY_AUDIT_SAORSA.md  SPECIFICATION.md  Sprint-3-Messaging-Architecture.md  TAURI_MCP_TESTING.md  TESTNET_DEPLOYMENT_README.md  UPDATE.md  bootstrap-config.toml  bootstrap.toml  (+37 more)
.claude/: CLAUDE.md
.github/: CI_HARDENING_SUMMARY.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  communitas-ci.yml  communitas-main.yml  release-binaries.yml  (+7 more)
communitas-core/: Cargo.toml
communitas-core/src/: core_context.rs  dht_schemas.rs  dht_storage.rs  error.rs  keystore.rs  lib.rs  local_storage.rs  test_harness.rs
communitas-core/src/security/: auth_middleware.rs  input_validation.rs  rate_limiter.rs  secure_storage.rs
communitas-core/src/storage/: dht_storage.rs  metrics.rs  mod.rs  reed_solomon_manager.rs
communitas-desktop/: Cargo.toml  build.rs  tauri.conf.json
communitas-desktop/src/: container.rs  core_cmds.rs  core_commands.rs  core_groups.rs  main.rs  sync.rs
communitas-desktop/src/security/: mod.rs  raw_spki.rs  tls_pinning.rs
communitas-desktop/tests/: tauri_commands_test.rs
communitas-headless/: Cargo.toml
communitas-headless/src/: main.rs  peer_cache.rs
crates/communitas-container/: Cargo.toml
crates/communitas-container/src/: lib.rs
crates/communitas-dht/: Cargo.toml
crates/communitas-dht/src/: lib.rs
docs/: AGENTS_API.md  CNAME  COMMUNITAS_SITE_SPEC.md  LOCAL_WORKFLOW_TESTING.md  PERFORMANCE_MONITORING.md  SAORSA_DEPLOYMENT_GUIDE.md  SAORSA_STORAGE_API.md  SAORSA_STORAGE_ARCHITECTURE.md  SAORSA_TESTING_GUIDE.md  SECURITY_ARCHITECTURE_DECISIONS.md  agents-core.html  agents.html  demo.js  index.html  marketing.md  roadmap.md  styles.css  system_spec.md
finalise/: COMMUNITAS_SPEC.md  DEPLOY_TESTNET.md  TASKS.md
logs/: notification.json  pre_compact.json  pre_tool_use.json  session_start.json  stop.json  subagent_stop.json  user_prompt_submit.json
node-0/: config.toml
node-1/: config.toml
playwright-report/: index.html
public/: test.html
scripts/: build-and-deploy-docker.sh  collect-node-ips.sh  deploy-testnet-binaries.sh  kill-ports.sh  mcp-http-demo.sh  offline-start.sh  offline-stop.sh  offline-test.sh  p2p-performance-test.sh  run-browser-and-mcp-http.sh  smoke-mcp-http.sh  test-workflows-locally.sh
src/: App.test.tsx  App.tsx  App.tsx.backup  App.tsx.backup2  SimpleTestApp.tsx  TestApp.tsx  index.css  lib.rs  main-simple.tsx  main-test.tsx  main.rs  main.tsx  setup-test-workspace.ts  setupTests.ts  test-identity.ts  test-network-connection.ts  test-offline-capabilities.ts  test-tauri-groups.ts
src-tauri/: Cargo.toml  Cargo.toml.bak  Cargo.toml.bak2  TASK_6_MESSAGING_PROGRESS.md  TASK_7_COMPLETION_SUMMARY.md  TASK_7_GROUP_CHAT_PROGRESS.md  build.rs  debug_keyring.rs  deny.toml  tauri.conf.json  temp_platform_imports.txt  test_keyring.rs  test_keyring_api.rs  test_keyring_detailed.rs  test_saorsa_pqc.rs  test_secure_storage_final.rs  test_secure_storage_isolated.rs
src-tauri/.claude/state/: orchestrator.json  task_1_complete
src-tauri/.communitas-data/: metadata.json
src-tauri/keys/: private.key  private.key.pub
src-tauri/logs/: notification.json  post_tool_use.json  pre_compact.json  pre_tool_use.json  session_start.json  stop.json  subagent_stop.json  user_prompt_submit.json
src-tauri/src/: bootstrap.rs  contact_commands.rs  contacts.rs  container.rs  core_cmds.rs  core_commands.rs  core_context.rs  core_groups.rs  dht_events.rs  dht_facade.rs  error.rs  files.rs  geographic_commands.rs  geographic_routing.rs  groups.rs  identity.rs  identity_commands.rs  identity_commands_legacy_ed25519.rs  keystore.rs  lib.rs  lib.rs.bak  main.rs  main.rs.backup  main.rs.backup_fixed  main.rs.bak  main.rs.fix2  main.rs.tmp2  main.rs.tmp3  main.rs.tmp4  main.rs.tmp5  main_complex.rs  mcp_plugin.rs  messaging_commands.rs  organization.rs  pqc_bridge.rs  pqc_config.rs  saorsa_storage_commands.rs  secure_fec.rs  secure_storage.rs  stores.rs  (+4 more)
src-tauri/src/components/dht/: DhtOperations.tsx  index.ts
src-tauri/src/dht.bak/: content_store.rs  fault_tolerance.rs  kademlia.rs  mod.rs  network_topology.rs  peer_manager.rs  performance.rs  routing_table.rs
src-tauri/src/identity.bak/: encrypted_file_storage.rs  identity_manager.rs  linux_secret_service.rs  macos_keychain.rs  mod.rs  secure_storage.rs  windows_credential_manager.rs
src-tauri/src/messaging/: crypto.rs  group.rs  mod.rs  storage.rs  sync.rs
src-tauri/src/saorsa_storage/: benchmarks.rs  cache.rs  config.rs  content.rs  engine.rs  errors.rs  group.rs  mod.rs  namespace.rs  network.rs  performance_test.rs  policy.rs  pqc_crypto.rs  pqc_crypto_broken.rs  pqc_crypto_old.rs  pqc_integration_tests.rs  profiler.rs
src-tauri/src/security/: auth_middleware.rs  input_validation.rs  mod.rs  rate_limiter.rs  raw_spki.rs  secure_storage.rs  tls_pinning.rs
src-tauri/src/services/: production_organization_service.rs
src-tauri/src/storage/: capacity_manager.rs  dht_storage.rs  entity_storage.rs  local_storage.rs  metrics.rs  mod.rs  reed_solomon_manager.rs  reed_solomon_v2.rs  shard_distributor.rs
src-tauri/tests/: comprehensive_backend_tests.rs  dht_facade_local.rs  integration_dht_storage.rs  integration_storage.rs  reed_solomon_encode_decode.rs  shard_distributor_send.rs  storage_policy_tests.rs  test_reed_solomon_v2.rs
tests/: app-smoke.spec.ts  comprehensive-e2e.spec.ts  e2e-collaboration.spec.ts  ux.spec.ts
(+259 files in other folders)
