[package]
name = "communitas"
# Fixed four-word-networking import dependency issue
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Local-first PQC collaboration app with per-entity virtual disks and DNS-free websites (saorsa-core)"
keywords = ["p2p", "chat", "diagnostics", "networking", "tauri"]
categories = ["network-programming", "command-line-utilities"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "SPECIFICATION.md",
    "DESIGN.md",
]

# For crates.io publishing
[package.metadata.tauri]
identifier = "com.p2pfoundation.communitas"

[dependencies]
# P2P Foundation - use published saorsa-core
saorsa-core = "0.3.19"

# Async runtime
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
sled = "0.34"
chrono = "0.4"

# Property testing
proptest = { version = "1.4", optional = true }

# Additional dependencies
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5.0"
rand = "0.8"
hex = "0.4"
communitas-container = { path = "crates/communitas-container" }
ant-quic = "0.8"
ed25519-dalek = "2"
once_cell = "1.19"

# Headless node dependencies
self_update = "0.41"
warp = "0.3"
toml = "0.8"
tempfile = "3.8"

# Tauri will be added when we set up the Tauri project
# tauri = { version = "2.0.0-alpha", features = ["api-all"] }

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"

[features]
default = []
test-harness = ["proptest"]

[lints]
workspace = true

[[bin]]
name = "communitas-headless"
path = "src-tauri/src/bin/communitas-headless.rs"

[workspace]
members = ["src-tauri", "crates/communitas-dht", "crates/communitas-container"]

[workspace.lints]

[workspace.package]
edition = "2024"
version = "0.1.17"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/dirvine/communitas-foundation"
repository = "https://github.com/dirvine/communitas-foundation"
