[package]
name = "communitas-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core business logic for Communitas - PQC collaboration with virtual disks"

[dependencies]
# Saorsa Labs - use published crate
saorsa-core = "=0.3.21"
saorsa-fec = "0.4.11"
saorsa-mls = "0.1.5"
saorsa-rsps = "0.2.0"
saorsa-pqc = "0.3.12"
saorsa-seal = "0.1.2"

# Async runtime
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
bincode = "1.3"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
log = "0.4"

# Cryptography and security
blake3 = "1.0"
hex = "0.4"
rand = "0.8"
ed25519-dalek = "2"
argon2 = "0.5"
zeroize = "1.7"
secrecy = "0.8"

# QUIC transport
ant-quic = "0.8"

# Database and storage
rusqlite = { version = "0.37", features = ["chrono", "serde_json", "uuid", "bundled"] }
deadpool-sqlite = "0.12.1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
four-word-networking = "2.3"
getrandom = "0.2"
base64 = "0.22"
regex = "1.10"
lazy_static = "1.4"
validator = { version = "0.20", features = ["derive"] }

# Compression
flate2 = "1.0"

# File operations
mime_guess = "2.0"
tempfile = "3.0"

# Secure storage (platform-specific)
keyring = "3.2"

# Local dependencies
communitas-container = { path = "../crates/communitas-container" }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.0"
