[package]
name = "communitas-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Communitas desktop app (Tauri) — local-first PQC collaboration"
default-run = "communitas-desktop"

[[bin]]
name = "communitas-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
# Core business logic
communitas-core = { path = "../communitas-core" }
communitas-container = { path = "../crates/communitas-container" }

# Saorsa Core - needed for direct use
saorsa-core = "=0.3.16"
saorsa-fec = "0.4.11"

# Networking
ant-quic = "0.8"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
four-word-networking = "2.3"
blake3 = "1.0"
base64 = "0.22"

# TLS/Security
rustls = "0.23"
rustls-pemfile = "2.0"

# Tauri framework
tauri = { version = "2.6.1", features = ["custom-protocol"] }
tauri-plugin-log = { version = "2" }
tauri-plugin-updater = { version = "2" }

# Async runtime (re-export from workspace)
tokio = { version = "1.39", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"