[package]
name = "communitas-headless"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Communitas headless node and CLI - bootstrap and seed node for the network"

[[bin]]
name = "communitas-headless"
path = "src/main.rs"

[dependencies]
# Core business logic
communitas-core = { path = "../communitas-core" }
communitas-container = { path = "../crates/communitas-container" }

# Networking
ant-quic = "0.8"
saorsa-core = "=0.3.21"
four-word-networking = "2.6"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.39", features = ["full"] }

# Web server for API
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
hex = "0.4"
ed25519-dalek = "2"

# Self-update functionality
self_update = "0.41"

# Network
reqwest = { version = "0.12", features = ["json"] }

# Utils
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
