[package]
name = "communitas-tauri"
version = "0.1.0"
description = "Communitas P2P Chat & Diagnostics - Tauri Backend"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/dirvine/communitas-foundation"
homepage = "https://github.com/dirvine/communitas-foundation"
documentation = "https://docs.rs/communitas-tauri"
edition = "2024"
rust-version = "1.85.0"
default-run = "communitas-tauri"

[lib]
name = "communitas_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "communitas-tauri"
path = "src/main.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[[bin]]
name = "test_keyring"
path = "test_keyring.rs"

[[bin]]
name = "test_secure_storage_isolated"
path = "test_secure_storage_isolated.rs"

[[bin]]
name = "test_keyring_detailed"
path = "test_keyring_detailed.rs"

[[bin]]
name = "test_secure_storage_final"
path = "test_secure_storage_final.rs"

[[bin]]
name = "debug_keyring"
path = "debug_keyring.rs"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
# Tauri
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.1", features = [] }
tauri-plugin-log = "2"

# Saorsa Labs - Use GitHub dependencies
saorsa-core = { git = "https://github.com/dirvine/saorsa-core-foundation.git", features = ["quantum-resistant"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
warp = "0.3"

# Additional dependencies for identity system
async-trait = "0.1"
bincode = "1.3"
hex = "0.4"
blake3 = "1.0"
once_cell = "1.19"
futures = "0.3"
getrandom = "0.2"
four-word-networking = "2.3"

# Cryptographic dependencies for messaging
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Compression
flate2 = "1.0"

# File type detection
mime_guess = "2.0"

# Secure storage
keyring = "3.2"
base64 = "0.22"

# Reed Solomon FEC for storage
saorsa-fec = { git = "https://github.com/dirvine/saorsa-fec-foundation.git" }

# Security and validation dependencies
validator = { version = "0.18", features = ["derive"] }
secrecy = "0.8"
argon2 = "0.5"
zeroize = "1.7"
regex = "1.10"
lazy_static = "1.4"

# Testing dependencies
[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
