[package]
name = "communitas-tauri"
version = "0.1.17"
description = "Communitas desktop app backend (Tauri) — local-first PQC collaboration with per-entity virtual disks and DNS-free websites"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/dirvine/communitas-foundation"
homepage = "https://github.com/dirvine/communitas-foundation"
documentation = "https://docs.rs/communitas-tauri"
edition = "2024"
rust-version = "1.85.0"
default-run = "communitas"

[lib]
name = "communitas_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "communitas"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "communitas-headless"
path = "src/bin/communitas-headless.rs"



[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
log = "0.4"
# Tauri GUI deps are optional and only compiled with the `desktop` feature
tauri = { version = "2.6.1", features = [], optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }

# Saorsa Labs - use published crate
saorsa-core = "0.3.19"
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
warp = "0.3"

# Additional dependencies for identity system
async-trait = "0.1"
bincode = "1.3"
hex = "0.4"
blake3 = "1.0"
once_cell = "1.19"
futures = "0.3"
getrandom = "0.2"
four-word-networking = "2.3"

# Post-Quantum Cryptographic dependencies
saorsa-pqc = "0.3.12"
saorsa-seal = "0.1.2"
rand = "0.8"
communitas-container = { path = "../crates/communitas-container" }

# QUIC transport (central part, no feature gate)
ant-quic = "0.8"
ed25519-dalek = "2"

# Database and storage
# Using rusqlite to match saorsa-core 0.3.16 dependencies
rusqlite = { version = "0.37", features = ["chrono", "serde_json", "uuid", "bundled"] }
deadpool-sqlite = "0.12.1"
# Note: sqlx removed to avoid SQLite version conflicts with rusqlite

# Compression
flate2 = "1.0"

# HTTP client for auto-updater
reqwest = { version = "0.12", features = ["json"] }

# Self-update for headless CLI
self_update = "0.41"

# File type detection
mime_guess = "2.0"

# Secure storage
keyring = "3.2"
base64 = "0.22"

# Saorsa ecosystem for P2P functionality (from crates.io) - updated to latest
saorsa-fec = "0.4.11"
saorsa-mls = "0.1.5"
saorsa-rsps = "0.2.0"

# Security and validation dependencies
validator = { version = "0.18", features = ["derive"] }
secrecy = "0.8"
argon2 = "0.5"
zeroize = "1.7"
regex = "1.10"
lazy_static = "1.4"

# Test harness dependencies
tempfile = "3.0"

 # Testing dependencies
 [dev-dependencies]
 proptest = "1.4"
 tokio-test = "0.4"

[features]
default = []
# Enable GUI/desktop build (Tauri + plugins + protocol feature)
desktop = [
  "dep:tauri",
  "dep:tauri-plugin-log",
  "dep:tauri-plugin-updater",
  "custom-protocol",
]
custom-protocol = ["tauri/custom-protocol"]
