[package]
name = "communitas-container"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
saorsa-fec = "0.4.11"
saorsa-seal = "0.1.2"
saorsa-core = "0.3.19"
parking_lot = "0.12"
rayon = "1.10"
hex = "0.4"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.39", features = ["rt", "macros"] }
