[package]
name = "communitas-dht"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
saorsa-core = "0.3.19"

[dev-dependencies]
rand = "0.8"
